--- a/portfolio.html
+++ b/portfolio.html
@@ -315,7 +315,7 @@
             color: rgb(198, 123, 213)
         }
         .desc {
-            font-size: 1.7vw;
+            font-size: 1.6vw;
             font-family: 'Preahvihear', sans-serif;
             margin: 1vw;
             margin-right: 2vw;
@@ -357,6 +357,143 @@
         }
         #git {
             left: 2vw;
+        }
+        @media screen and (max-width: 1000px) {
+                .main {
+                    background-color: antiquewhite;
+                    height: 30vh;
+                    width: 101vh;
+                }
+                #title1 {
+                    font-size: 6vh;
+                    width: 30vh;
+                }
+                #title2 {
+                    font-size: 1.5vh;
+                    top: 2vh;
+                }
+                #quotetxt {
+                    top: 19vh;
+                    font-size: 2vh;
+                }
+                #quoteauthor {
+                    top:22vh;
+                    font-size: 2vh;
+                    left: 1.7vh ;
+                }
+
+                #pyimg {
+                    animation-name: none;
+                    right: 15vh;
+                    width: 5vh;
+                    top: 4vh;
+                }
+                #tensimg {
+                    animation-name: none;
+                    right: 7vh;
+                    width: 5vh;
+                    top: 3.5vh;
+                }
+                #cssimg {
+                    animation-name: none;
+                    right: 15vh;
+                    width: 5vh;
+                    top: 11vh;
+                }
+                #sqlimg {
+                    animation-name: none;
+                    right: 6.5vh;
+                    width: 5vh;
+                    top: 11vh;
+                }
+                .titles {
+                    font-size: 3.5vh;
+                }
+                #para1 {
+                    font-size: 2vh;
+                }
+                #a1, #a2, #a3, #a4 {
+                    font-size: 2vh;
+                    margin-left: 2vh;
+                }
+                .skilltxt {
+                    font-size: 2vh;
+                }
+                #b1 {
+                    margin-top: 0.65vh;
+                }
+                #b2 {
+                    margin-top: 0.4vh;
+                }
+                #b9 {
+                    margin-top: 0.6vh;
+                    width: 38vh;
+                    margin-left: 2vh;
+                }
+                #b10 {
+                    margin-top: 0.5vh;
+                }
+                #b11 {
+                    width: 37vh;
+                    margin-left: 3vh;
+                }
+                #b10, #b6, #b5, #b4, #b3 {
+                    margin-left: 0.5vh;
+                }
+                #b7, #b8, #b9, #b11, #b12, #b13, #b14, #b15 {
+                    margin-top: 0.6vh;
+                }
+                .bar {
+                    width: 40vh;
+                    font-size: 8vh;
+                }
+                .bar::before {
+                    font-size: 1.5vh;
+                    top: 0vw;
+                }
+                #b16 {
+                    font-size: 2vh;
+                }
+                .projecttxt {
+                    font-size: 3vh;
+                }
+                #image1 {
+                    width: 50vh;
+                    margin-left: 2vw;
+                }
+                #image2 {
+                    width: 50vh;
+                    margin-left: 2vw;
+                }
+                .desc {
+                    font-size: 2vh;
+                    margin: 2vh;
+                }
+                .end {
+                    height: 13vh;
+                }
+                #endtxt {
+                    font-size: 2vh;
+                    margin-left: 1vh;
+                }
+                .iconss {
+                    top: 5vh;
+                    width: 4vh;
+                }
+                #git,#abc,#insta,#face {
+                    margin-left: 16vh ;
+                }
+                #abc {
+                    left: 6vh;
+                }
+                #face {
+                    left: 11vh;
+                }
+                #insta{
+                    left: 16vh;
+                }
+
+            
         }
         
 
