--- a/portfolio.html
+++ b/portfolio.html
@@ -359,6 +359,9 @@
             left: 2vw;
         }
         @media screen and (max-width: 1000px) {
+                body {
+                    overflow-x: hidden;
+                }
                 .main {
                     background-color: antiquewhite;
                     height: 30vh;
