--- a/portfolio.html
+++ b/portfolio.html
@@ -365,7 +365,7 @@
                 .main {
                     background-color: antiquewhite;
                     height: 30vh;
-                    width: 101vh;
+                    max-width: 500px;
                 }
                 #title1 {
                     font-size: 6vh;
