--- a/portfolio.html
+++ b/portfolio.html
@@ -365,7 +365,8 @@
                 .main {
                     background-color: antiquewhite;
                     height: 30vh;
-                    max-width: 500px;
+                    width: 100%;
+                    max-width: 100%;
                 }
                 #title1 {
                     font-size: 6vh;
