--- a/portfolio.html
+++ b/portfolio.html
@@ -349,9 +349,6 @@
         #insta {
             left: 20vw;
         }
-        #face {
-            left: 14vw;
-        }
         #abc {
             left: 8vw;
         }
@@ -364,137 +361,131 @@
                 }
                 .main {
                     background-color: antiquewhite;
-                    height: 30vh;
+                    height: 15rem;
                     width: 100%;
                     max-width: 100%;
                 }
                 #title1 {
-                    font-size: 6vh;
-                    width: 30vh;
+                    font-size: 3rem;
+                    width: 11rem;
                 }
                 #title2 {
-                    font-size: 1.5vh;
-                    top: 2vh;
+                    visibility: hidden;
                 }
                 #quotetxt {
-                    top: 19vh;
-                    font-size: 2vh;
+                    top: 10rem;
+                    font-size: 1rem;
                 }
                 #quoteauthor {
-                    top:22vh;
-                    font-size: 2vh;
-                    left: 1.7vh ;
+                    top:11.5rem;
+                    font-size: 1rem;
+                    left: 1rem ;
                 }
 
                 #pyimg {
                     animation-name: none;
-                    right: 15vh;
-                    width: 5vh;
-                    top: 4vh;
+                    right: 8rem;
+                    width: 3rem;
+                    top: 2rem;
                 }
                 #tensimg {
                     animation-name: none;
-                    right: 7vh;
-                    width: 5vh;
-                    top: 3.5vh;
+                    right: 3rem;
+                    width: 3rem;
+                    top: 1.9rem;
                 }
                 #cssimg {
                     animation-name: none;
-                    right: 15vh;
-                    width: 5vh;
-                    top: 11vh;
+                    right: 8rem;
+                    width: 3rem;
+                    top: 6rem;
                 }
                 #sqlimg {
                     animation-name: none;
-                    right: 6.5vh;
-                    width: 5vh;
-                    top: 11vh;
+                    right: 2.7rem;
+                    width: 3rem;
+                    top: 6rem;
                 }
                 .titles {
-                    font-size: 3.5vh;
+                    font-size: 1.7rem;
                 }
                 #para1 {
-                    font-size: 2vh;
+                    font-size: 1rem;
                 }
                 #a1, #a2, #a3, #a4 {
-                    font-size: 2vh;
-                    margin-left: 2vh;
+                    font-size: 1rem;
+                    margin-left: 1rem;
                 }
                 .skilltxt {
-                    font-size: 2vh;
+                    font-size: 1rem;
                 }
                 #b1 {
-                    margin-top: 0.65vh;
+                    margin-top: 0.4rem;
                 }
                 #b2 {
-                    margin-top: 0.4vh;
+                    margin-top: 0.3rem;
                 }
                 #b9 {
-                    margin-top: 0.6vh;
-                    width: 38vh;
-                    margin-left: 2vh;
+                    width: 700%;
+                    margin-left: 1rem;
                 }
                 #b10 {
-                    margin-top: 0.5vh;
+                    margin-top: 0.25rem;
                 }
                 #b11 {
-                    width: 37vh;
-                    margin-left: 3vh;
+                    width: 700%;
+                    margin-left: 1.5rem;
                 }
                 #b10, #b6, #b5, #b4, #b3 {
-                    margin-left: 0.5vh;
+                    margin-left: 0.25rem;
                 }
                 #b7, #b8, #b9, #b11, #b12, #b13, #b14, #b15 {
-                    margin-top: 0.6vh;
+                    margin-top: 0.3rem;
                 }
                 .bar {
-                    width: 40vh;
-                    font-size: 8vh;
+                    width: 700%;
                 }
                 .bar::before {
-                    font-size: 1.5vh;
-                    top: 0vw;
+                    font-size: 1rem;
+                    top: 0rem;
                 }
                 #b16 {
-                    font-size: 2vh;
+                    font-size: 1rem;
                 }
                 .projecttxt {
-                    font-size: 3vh;
+                    font-size: 1.5rem;
                 }
                 #image1 {
-                    width: 50vh;
-                    margin-left: 2vw;
+                    width: 25rem;
+                    margin-left: 1rem;
                 }
                 #image2 {
-                    width: 50vh;
-                    margin-left: 2vw;
+                    width: 25rem;
+                    margin-left: 1rem;
                 }
                 .desc {
-                    font-size: 2vh;
-                    margin: 2vh;
+                    font-size: 1rem;
+                    margin: 1rem;
                 }
                 .end {
-                    height: 13vh;
+                    height: 6.5rem;
                 }
                 #endtxt {
-                    font-size: 2vh;
-                    margin-left: 1vh;
+                    font-size: 1rem;
+                    margin-left: 0.5rem;
                 }
                 .iconss {
-                    top: 5vh;
-                    width: 4vh;
+                    top: 2.5rem;
+                    width: 2rem;
                 }
                 #git,#abc,#insta,#face {
-                    margin-left: 16vh ;
+                    margin-left: 10rem ;
                 }
                 #abc {
-                    left: 6vh;
-                }
-                #face {
-                    left: 11vh;
+                    left: 3rem;
                 }
                 #insta{
-                    left: 16vh;
+                    left: 5.5rem;
                 }
 
             
@@ -624,7 +615,6 @@
     </div>
     <div class="end">
         <p id="endtxt">Have any questions? Encountered any glitches in this website? Any suggestions?</p>
-        <a href=""><img src="facebook.png" alt="faceimg" id="face" class="iconss"></a>
         <a href=""><img src="instagram.png" alt="instaimg" id="insta" class="iconss"></a>
         <a href=""><img src="github.png" alt="gitimg" id="git" class="iconss"></a>
         <a href=""><img src="this.png" alt="thisimg" id="abc" class="iconss"></a>
