--- a/portfolio.html
+++ b/portfolio.html
@@ -456,11 +456,11 @@
                     font-size: 1.5rem;
                 }
                 #image1 {
-                    width: 22rem;
+                    width: 89vw;
                     margin-left: 1rem;
                 }
                 #image2 {
-                    width: 22rem;
+                    width: 89vw;
                     margin-left: 1rem;
                 }
                 .desc {
