--- a/portfolio.html
+++ b/portfolio.html
@@ -269,7 +269,7 @@
         }
         .deco {
             color: darkblue;
-            cursor: default;
+            cursor: pointer;
         }
         .projecttxt {
             font-size: 2.3vw;
@@ -283,14 +283,14 @@
             margin: 5vw;
             margin-left: 20vw;
             border: 1vw double rgb(218, 0, 0);
-            cursor: pointer;
+            cursor: default;
         }
         #image2 {
             width: 60vw;
             margin-left: 20vw;
             margin-bottom: 5vw;
             border: 1vw double rgb(218, 0, 0);
-            cursor: pointer
+            cursor: default
         }  
         #image3 {
             width: 60vw;
@@ -347,13 +347,13 @@
             opacity: 0.7;
         }
         #insta {
-            left: 20vw;
+            left: 17vw;
         }
         #abc {
-            left: 8vw;
+            left: 11vw;
         }
         #git {
-            left: 2vw;
+            left: 5vw;
         }
         @media screen and (max-width: 1000px) {
                 body {
@@ -361,7 +361,7 @@
                 }
                 .main {
                     background-color: antiquewhite;
-                    height: 17rem;
+                    height: 15rem;
                     width: 100%;
                     max-width: 100%;
                 }
@@ -565,46 +565,46 @@
     <div class="content4">
         <h2 class="titles">Projects</h2>
         <hr id="line">
-        <div class= "projecttxt" id="c1">✤ Astrology Webpage Template</div>
+        <div class= "projecttxt" id="c1"><a href="https://github.com/KshavCode/Astrology-Webpage-Template" target="_blank" class="deco">✤ Astrology Webpage Template</a></div>
         <img src="img1.jpg" id="image1" alt="img1">
         <img src="img2.jpg" id="image2" alt="img2">
-        <p class="desc">This was my latest project (created on : 14 July 2023) before this portfolio website. I have used animations and a lot of new stuff in the above template.  If you would like to visit the website then <a href="" id="linktxt">click here</a> to open it on github. Also, this website is 90% responsive hence, mobile users may find it hard to explore this template so I suggest them to turn on the web view on their mobile phone.</p>
-        <div class= "projecttxt" id="c2"><a href="" class="deco">✤ Bill Invoice Register</a></div>
+        <p class="desc">This was my latest project (created on : 14 July 2023) before this portfolio website. I have used animations and a lot of new stuff in the above template.  If you would like to visit the website then <a href="https://github.com/KshavCode/Astrology-Webpage-Template" target="_blank" id="linktxt">click here</a> to open it on github. Also, this website is 90% responsive hence, mobile users may find it hard to explore this template so I suggest them to turn on the web view on their mobile phone.</p>
+        <div class= "projecttxt" id="c2"><a href="https://github.com/KshavCode/Bill-Invoice-Project" target="_blank" class="deco">✤ Bill Invoice Register</a></div>
         <img src="img3.jpg" id="image1" alt="img3">
         <img src="img4.jpg" id="image2" alt="img4">
-        <p class="desc">One of the hardest but worth it projects of mine. It was created on 11 June 2023. It is an invoice collector app, which imports all the prices from a json file (the owner can change price of any item just by accessing json file) and then using the quantity to calculate the total amount. Then it saves the invoice in a folder of current date. The program creates the folder itself so no need to create one. You just need to open the app, which will reset the invoice to '0001' every new day, while the old invoices are collected in folder. Also, don't worry, the folders are renamed itself according to the current date of the invoice saving. It means that there will be a list of invoices in every different folder based on date. This project uses JSON and Tkinter module. <a href="" id="linktxt">Click here</a> to access the source code of this app!</p>
-        <div class= "projecttxt" id="c3"><a href="" class="deco">✤ Contact List Storage</a></div>
+        <p class="desc">One of the hardest but worth it projects of mine. It was created on 11 June 2023. It is an invoice collector app, which imports all the prices from a json file (the owner can change price of any item just by accessing json file) and then using the quantity to calculate the total amount. Then it saves the invoice in a folder of current date. The program creates the folder itself so no need to create one. You just need to open the app, which will reset the invoice to '0001' every new day, while the old invoices are collected in folder. Also, don't worry, the folders are renamed itself according to the current date of the invoice saving. It means that there will be a list of invoices in every different folder based on date. This project uses JSON and Tkinter module. <a href="https://github.com/KshavCode/Bill-Invoice-Project" target="_blank" id="linktxt">Click here</a> to access the source code of this app!</p>
+        <div class= "projecttxt" id="c3"><a href="https://github.com/KshavCode/Contact-List-Storage" target="_blank" class="deco">✤ Contact List Storage</a></div>
         <img src="img5.jpg" id="image1" alt="img5">
         <img src="img6.jpg" id="image2" alt="img6">
-        <p class="desc">This project is purely of python and was made on 13 June 2023, and took me 1-2 hours to complete. It may look simple but actually it's complicated because it uses OOPS, mainly classes, inheritances, etc. which are really complex to understand. It saves a number (temporarily!) with a contact name that you like to keep. I was thinking was using a json file in order to store these contacts but to keep it simple (which was complicated due to OOPS), I just kept it like that. The access to the source code is <a href="" id="linktxt">here</a>.</p>
-        <div class= "projecttxt" id="c4"><a href="" class="deco">✤ Dictionary</a></div>
+        <p class="desc">This project is purely of python and was made on 13 June 2023, and took me 1-2 hours to complete. It may look simple but actually it's complicated because it uses OOPS, mainly classes, inheritances, etc. which are really complex to understand. It saves a number (temporarily!) with a contact name that you like to keep. I was thinking was using a json file in order to store these contacts but to keep it simple (which was complicated due to OOPS), I just kept it like that. The access to the source code is <a href="https://github.com/KshavCode/Contact-List-Storage" target="_blank" id="linktxt">here</a>.</p>
+        <div class= "projecttxt" id="c4"><a href="https://github.com/KshavCode/Dictionary-Project" target="_blank" class="deco">✤ Dictionary</a></div>
         <img src="img7.jpg" id="image1" alt="img1">
         <img src="img8.jpg" id="image2" alt="img2">
-        <p class="desc">Another unique project which uses API in order to work. You may search on google what an API is or, it's just a simple data extraction process from another website. So, this program is just a middleman which brings vegetables (the data) from a farmer (website)and gives it to the vendor (program), which eventually gives the vegetable (data) to the customer (the user). The program uses JSON, Requests and Win32 API client in order to complete. Requests brings the data to the program, JSON changes the format of the 'brought data' to an 'usable data' format and at last it shows the meaning (no matter how many, can be more than 10 too!). Win32 is only used to speak the word (for pronounciation). <a href="" id="linktxt">Here</a> is the link to the source code. The creation of this program was on 25 April 2023.</p>
-        <div class= "projecttxt" id="c5"><a href="" class="deco">✤ Hangman</a></div>
+        <p class="desc">Another unique project which uses API in order to work. You may search on google what an API is or, it's just a simple data extraction process from another website. So, this program is just a middleman which brings vegetables (the data) from a farmer (website)and gives it to the vendor (program), which eventually gives the vegetable (data) to the customer (the user). The program uses JSON, Requests and Win32 API client in order to complete. Requests brings the data to the program, JSON changes the format of the 'brought data' to an 'usable data' format and at last it shows the meaning (no matter how many, can be more than 10 too!). Win32 is only used to speak the word (for pronounciation). <a href="https://github.com/KshavCode/Dictionary-Project" id="linktxt" target="_blank">Here</a> is the link to the source code. The creation of this program was on 25 April 2023.</p>
+        <div class= "projecttxt" id="c5"><a href="https://github.com/KshavCode/Hangman-Project" class="deco" target="_blank">✤ Hangman</a></div>
         <img src="img9.jpg" id="image1" alt="img1">
         <img src="img10.jpg" id="image2" alt="img2">
-        <p class="desc">One of the most complex + mind wrecking program. I spent hours to make the program fully functionable and a little beautiful (with blanks and guesses). It is a pure Python program, but uses a lot of knowledge in order to get completed. <a href="" id="linktxt">Click here</a> for the source code. Also the words entered in the programs to use, are entered manually by me. I could use API to get new words everytime but I didn't because I was already mad while completing the program. Anyways, the program was created on 10 May 2023. It also saves the scores (based on guessing the word based on minimum lost lives) in a text file.</p>
-        <div class= "projecttxt" id="c6"><a href="" class="deco">✤ Internet Speed Test</a></div>
+        <p class="desc">One of the most complex + mind wrecking program. I spent hours to make the program fully functionable and a little beautiful (with blanks and guesses). It is a pure Python program, but uses a lot of knowledge in order to get completed. <a href="https://github.com/KshavCode/Hangman-Project" target="_blank" id="linktxt">Click here</a> for the source code. Also the words entered in the programs to use, are entered manually by me. I could use API to get new words everytime but I didn't because I was already mad while completing the program. Anyways, the program was created on 10 May 2023. It also saves the scores (based on guessing the word based on minimum lost lives) in a text file.</p>
+        <div class= "projecttxt" id="c6"><a href="https://github.com/KshavCode/Internet-Speed-Test" target="_blank" class="deco">✤ Internet Speed Test</a></div>
         <img src="img11.jpg" id="image1" alt="img1">
         <img src="img12.jpg" id="image2" alt="img2">
-        <p class="desc">Created on 26 April 2023, this program uses API as usual and it can return the internet speed of uploading and downloading according to the server you choose. You choose the nearest server or the best server in order to measure your internet speed. This one's pretty simple. Here is the <a href="" id="linktxt">link</a>  for you to check out it's source code.</p>
-        <div class= "projecttxt" id="c7"><a href="" class="deco">✤ Multiplayer Snake Game</a></div>
+        <p class="desc">Created on 26 April 2023, this program uses API as usual and it can return the internet speed of uploading and downloading according to the server you choose. You choose the nearest server or the best server in order to measure your internet speed. This one's pretty simple. Here is the <a href="https://github.com/KshavCode/Internet-Speed-Test" target="_blank" id="linktxt">link</a>  for you to check out it's source code.</p>
+        <div class= "projecttxt" id="c7"><a href="https://github.com/KshavCode/Multiplayer-Snake-Game" target="_blank" class="deco">✤ Multiplayer Snake Game</a></div>
         <img src="img13.jpg" id="image1" alt="img1">
         <img src="img14.jpg" id="image2" alt="img2">
-        <p class="desc">One of the best and the interesting project. This one is yet to be completed but still I am providing the link to it's <a href="" id="linktxt">source code</a>. Only the 'game over' scene is yet to be completed. Also, this project was created on 22 November 2022, my first project. I was just learning the tutorial for the regular snake game and suddenly an idea popped into my head of making a 2 player snake game! Inspiration was slither.io, only the difference was that there will 2 players for this game. This is my favorite project of all time as I made the general snake game into multiplayer, all by myself. It uses the PyGame module. If you want to play then the source code is given the controls for Player1 is 'WASD' and Player2 is 'Arrow Keys'. Have fun playing! A little fun fact here - If you are hearing music while playing this game, then those two are made by me. I produced both of those tracks myself.</p>
-        <div class= "projecttxt" id="c8"><a href="" class="deco">✤ Password Generator App</a></div>
+        <p class="desc">One of the best and the interesting project. This one is yet to be completed but still I am providing the link to it's <a href="https://github.com/KshavCode/Multiplayer-Snake-Game" id="linktxt" target="_blank" >source code</a>. Only the 'game over' scene is yet to be completed. Also, this project was created on 22 November 2022, my first project. I was just learning the tutorial for the regular snake game and suddenly an idea popped into my head of making a 2 player snake game! Inspiration was slither.io, only the difference was that there will 2 players for this game. This is my favorite project of all time as I made the general snake game into multiplayer, all by myself. It uses the PyGame module. If you want to play then the source code is given the controls for Player1 is 'WASD' and Player2 is 'Arrow Keys'. Have fun playing! A little fun fact here - If you are hearing music while playing this game, then those two are made by me. I produced both of those tracks myself.</p>
+        <div class= "projecttxt" id="c8"><a href="https://github.com/KshavCode/Password-Generator-App" target="_blank" class="deco">✤ Password Generator App</a></div>
         <img src="img15.jpg" id="image1" alt="img1">
         <img src="img16.jpg" id="image2" alt="img2">
-        <p class="desc">Easiest project in the whole list. I recommend this to everyone who are in the learning stage of Tkinter. You just need to put a MenuBar, Entry Field and a simple button which generates the password according to the length chosen by the user. You want source code? Then here is the <a href="" id="linktxt">link</a>!</p>
-        <div class= "projecttxt" id="c9"><a href="" class="deco">✤ QR Code Generator</a></div>
+        <p class="desc">Easiest project in the whole list. I recommend this to everyone who are in the learning stage of Tkinter. You just need to put a MenuBar, Entry Field and a simple button which generates the password according to the length chosen by the user. You want source code? Then here is the <a href="https://github.com/KshavCode/Password-Generator-App" target="_blank" id="linktxt">link</a>!</p>
+        <div class= "projecttxt" id="c9"><a href="https://github.com/KshavCode/QR-Code-Generator" class="deco" target="_blank" >✤ QR Code Generator</a></div>
         <img src="img17.jpg" id="image1" alt="img1">
         <img src="img18.jpg" id="image2" alt="img2">
-        <p class="desc">One more interesting project of this list, created on 24 April 2023. It may be little complicated but honestly, it's not. You just need to use Tkinter and PIL (pillow) module. Pillow is for image manipulation (photoshop using coding), and it's used here to convert the qrcode image data into valid image format as it is retrieved using API. So, once the user clicks on 'GENERATE CODE' button, the photo app from the PC will open up which will be having the QR code. Also, it's a permanent QR code, so you can even use it after many years. Here is the <a href="" id="linktxt">source code</a>. </p>
-        <div class= "projecttxt" id="c10"><a href="" class="deco">✤ Weather App</a></div>
+        <p class="desc">One more interesting project of this list, created on 24 April 2023. It may be little complicated but honestly, it's not. You just need to use Tkinter and PIL (pillow) module. Pillow is for image manipulation (photoshop using coding), and it's used here to convert the qrcode image data into valid image format as it is retrieved using API. So, once the user clicks on 'GENERATE CODE' button, the photo app from the PC will open up which will be having the QR code. Also, it's a permanent QR code, so you can even use it after many years. Here is the <a href="https://github.com/KshavCode/QR-Code-Generator" target="_blank"  id="linktxt">source code</a>. </p>
+        <div class= "projecttxt" id="c10"><a href="https://github.com/KshavCode/Weather-App" target="_blank" class="deco">✤ Weather App</a></div>
         <img src="img19.jpg" id="image1" alt="img1">
         <img src="img20.jpg" id="image2" alt="img2">
-        <p class="desc">Interesting one as it uses the API in order to show the results. Requests, Tkinter and JSON are the modules needed to run the program. Enter any place name and it will show you the information of the weather as shown in the above picture. Also, here's the <a href="" id="linktxt">link</a>  for the source code.</p>
+        <p class="desc">Interesting one as it uses the API in order to show the results. Requests, Tkinter and JSON are the modules needed to run the program. Enter any place name and it will show you the information of the weather as shown in the above picture. Also, here's the <a href="https://github.com/KshavCode/Weather-App" id="linktxt" target="_blank">link</a>  for the source code.</p>
         <div class="projecttxt" id="c11">✤ Image Format Changer</div>
         <p class="desc">This one was an interesting one too and my first ever PIL project which I made on 26 December 2022. Sadly, I lost it's source code. However, all you need is PIL and Tkinter. The user will upload the image using the Tkinter app and the PIL will change the format of the image into JPEG/WEBP/PNG and many more formats. Using the OS module, will save the images automatically in a self made folder with a random name. That is all. Sorry for unavaibility of source code.</p>
         <div class="projecttxt" id="c12">✤ Bot</div>
@@ -616,8 +616,8 @@
     <div class="end">
         <p id="endtxt">Have any questions? Encountered any glitches in this website? Any suggestions?</p>
         <a href=""><img src="instagram.png" alt="instaimg" id="insta" class="iconss"></a>
-        <a href=""><img src="github.png" alt="gitimg" id="git" class="iconss"></a>
-        <a href=""><img src="this.png" alt="thisimg" id="abc" class="iconss"></a>
+        <a href="https://github.com/KshavCode"><img src="github.png" alt="gitimg" id="git" class="iconss"></a>
+        <a href=""><img src="this.png" alt="abcimg" id="abc" class="iconss"></a>
     </div>
 </body>
 </html>
