--- a/portfolio.html
+++ b/portfolio.html
@@ -615,9 +615,9 @@
     </div>
     <div class="end">
         <p id="endtxt">Have any questions? Encountered any glitches in this website? Any suggestions?</p>
-        <a href=""><img src="instagram.png" alt="instaimg" id="insta" class="iconss"></a>
+        <a href="https://instagram.com/ehh.whatt?utm_source=qr&igshid=MzNlNGNkZWQ4Mg%3D%3D"><img src="instagram.png" alt="instaimg" id="insta" class="iconss"></a>
         <a href="https://github.com/KshavCode"><img src="github.png" alt="gitimg" id="git" class="iconss"></a>
-        <a href=""><img src="this.png" alt="abcimg" id="abc" class="iconss"></a>
+        <a href="https://discord.gg/An5cWwhQdY"><img src="abc.png" alt="abcimg" id="abc" class="iconss"></a>
     </div>
 </body>
 </html>
